; ModuleID = '/home/carl/AnghaBench/git/extr_match-trees.c_base_name_entries_compare.c'
source_filename = "/home/carl/AnghaBench/git/extr_match-trees.c_base_name_entries_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_entry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.name_entry*, %struct.name_entry*)* @base_name_entries_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @base_name_entries_compare(%struct.name_entry* %0, %struct.name_entry* %1) #0 {
  %3 = alloca %struct.name_entry*, align 8
  %4 = alloca %struct.name_entry*, align 8
  store %struct.name_entry* %0, %struct.name_entry** %3, align 8
  store %struct.name_entry* %1, %struct.name_entry** %4, align 8
  %5 = load %struct.name_entry*, %struct.name_entry** %3, align 8
  %6 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.name_entry*, %struct.name_entry** %3, align 8
  %9 = call i32 @tree_entry_len(%struct.name_entry* %8)
  %10 = load %struct.name_entry*, %struct.name_entry** %3, align 8
  %11 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %14 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %17 = call i32 @tree_entry_len(%struct.name_entry* %16)
  %18 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %19 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @base_name_compare(i32 %7, i32 %9, i32 %12, i32 %15, i32 %17, i32 %20)
  ret i32 %21
}

declare dso_local i32 @base_name_compare(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @tree_entry_len(%struct.name_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
